k8s/all/discovery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
  labels:
    app: discovery-service
spec:
  ports:
    - name: http
      port: 8761
      targetPort: http
  selector:
    app: discovery-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-service
  template:
    metadata:
      labels:
        app: discovery-service
    spec:
      containers:
        - name: discovery-service
          image: loretta-discovery-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8761
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 180
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 10
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
