k8s/all/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loretta-bank
spec:
  ingressClassName: nginx
  rules:
    - host: loretta-bank.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loretta-frontend
                port:
                  number: 80
